--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -104,6 +104,23 @@ p {
     max-width: 150px;
 }
 
+/* Refactored CSS & consolidated into benefit-article */
+.benefit-article{
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-article h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-article img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
 /* Refactored CSS & consolidated into content-article */
 .content-article {
     margin-bottom: 20px;
@@ -123,13 +140,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
